style2.css
/* Imports for Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Antic+Didone&family=MonteCarlo&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap');

/* CSS variables for common colours */
:root {
  /* These colours are specified by the client - do not change */
  --color-client-spec-1: #b7dde3;
  --color-client-spec-2: #fff9fb;
  --color-client-spec-3: #f3cabc;
  --color-client-spec-4: #7e989c;
  --color-client-spec-5: #985855;

  /* Black and white, but may be changed very subtly to suit palette */
  /* Note: please ensure correct contrast is maintained */
  --color-white: #fff;
  --color-black: #000;
  
  /* These are proposed colours - we can adjust these if desired */
  --color-proposed-purple-90: #0d0c0e;
  --color-proposed-purple-70: #48444d;
  --color-proposed-purple-50: #746c7c;
  --color-proposed-purple-35: #998fa3;
  --color-proposed-purple-20: #ccbfda;
  --color-proposed-purple-15: #d8cae6;
  --color-proposed-purple-10: #e0d2ee;

  /* Font variables */
  --font-family-display: 'MonteCarlo', serif;
  --font-family-display-serif: 'Antic Didone', serif;
  --font-family-body-sans-serif: 'Open Sans', sans-serif;
}

/* ***TEMPORARY DIVIDER CLASS*** (remove when separating page content) */
.temp-divider {
  height: 50vh;
  border-bottom: 1px dashed red;
  margin-bottom: 50vh;
}

/* Media Queries for Responsive Container Width */
@media only screen and (max-width: 623px) {
  .container {
    padding: 0 1rem;
  }

  .product, .form-small {
    min-width: calc(100% - 2rem);
  }
}
@media only screen and (min-width: 624px) {
  .container {
    width: 36rem;
  }

  .form-small {
    width: 30rem;
  }
}
@media only screen and (min-width: 728px) {
  .container {
    width: 42.5rem;
  }
}
@media only screen and (min-width: 952px) {
  .container {
    width: 56.5rem;
  }
}
@media only screen and (min-width: 1201px) {
  .container {
    width: 72rem;
  }
}

/* Document-wide CSS */
html {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  font-family: var(--font-family-body-sans-serif);
  font-size: 1.1rem;
  line-height: 1.1rem;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-family-display-serif);
  font-weight: 600;
}

h3 {
  color: var( --color-client-spec-5);
}

a {
  color: var(--color-proposed-purple-70);
}

button, select {
  height: 1.5rem;
  color: var(--color-proposed-purple-90);
  background-color: var(--color-proposed-purple-20);
  border: 1px solid var(--color-proposed-purple-50);
  border-radius: 0.3rem;
  transition: 0.1s;
}

button:hover, select:hover {
  background-color: var(--color-proposed-purple-15);
  transition: 0.3s;
}

button:active, select:active {
  background-color: var(--color-proposed-purple-10);
  transition: 0.1s;
}

::selection {
  color: var(--color-black);
  background: var(--color-client-spec-1);
}

/* Layout CSS */
.container {
  margin: 0 auto;
}

header {
  box-sizing: border-box;
}

header nav {
  padding: 0.2rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
  font-size: 1rem;
  line-height: 1rem;
  background-color: var(--color-client-spec-1);
}

header nav ul {
  margin: 0;
  padding: 0;
  display: inline-block;
}

header nav ul li {
  display: inline-block;
  padding-right: 1rem;
}

header nav ul li a {
  color: var( --color-client-spec-5);
  text-decoration: none;
}

header nav ul li a .material-icons {
  vertical-align: bottom;
}

header #header-brand {
  background-color: var(--color-client-spec-2);
  min-height: 8rem;
}

header #header-brand .container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: baseline;
}

header #header-brand h1 {
  margin: 0 3rem 0 0;
  padding: 1.5rem 0 0.3rem 0;
  font-family: var(--font-family-display);
  font-weight: 400;
  font-size: 4.5rem;
  line-height: 4.5rem;
  color: var(--color-proposed-purple-90);
  text-shadow: 0.2rem 0.2rem 0.3rem var(--color-client-spec-1);
  min-width: 380px;
}

header #header-search {
  display: inline-block;
  margin: 1.5rem 0 1rem 0;
}

header #header-search input[type=search] {
  height: 1.5rem;
  border: 1px solid var(--color-client-spec-1);
  border-radius: 0.3rem;
}

header #header-search #btnSearch {
  margin-left: 0.3rem;
}

main #section-banner {
  margin: 0;
  padding-bottom: 1.5rem;
  background-color: var(--color-client-spec-3);
  min-height: 8rem;
}

main #section-banner h2 {
  margin: 0;
  padding-top: 2rem;
  line-height: 2rem;
}

main #section-product-list .product-wrapper {
  display: grid;
}

footer {
  box-sizing: border-box;
  margin-top: auto;
  height: 4rem;
  color: var(--color-white);
  background-color: var(--color-client-spec-4);
}

footer .container ul {
  padding-left: 0;
}

footer .container ul li {
  display: inline-block;
  margin-right: 0.6rem;
  font-size: 0.8rem;
  line-height: 0.8rem;
}

/* Element Specific CSS */
#product-list {
  margin-top: 1rem;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem;
}

.product, .cart-item, .cart-total, .form-small {
  padding: 1rem;
  border: 1px solid var(--color-client-spec-1);
  border-radius: 0.3rem;
}

.product {
  width: 15rem;
}

.product img {
  max-width: 100%;
  max-height: 13rem;
  display: block;
  margin: 0 auto;
}

.product button {
  width: 100%;
  height: 2rem;
}

.cart-contents ul {
  padding-left: 0;
}

.cart-contents ul li {
  list-style: none;
}

.cart-item {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
}

.cart-item img {
  max-width: 6rem;
}

.cart-total {
  margin-bottom: 1rem;
}

.form-small {
  margin: 6rem auto;
}

.form-small input, .form-small button {
  display: block;
  box-sizing: border-box;
  width: 100%;
  margin: 0.5rem 0 1rem 0;
}

.form-small input {
  height: 1.5rem;
  border: 1px solid var(--color-client-spec-1);
  border-radius: 0.3rem;
}

